test/fail/match/match_incomplete.lly
#[
SyntaxError: Match pattern not exhaustive. The following case(s) are missing:
* None
    from match_incomplete.lly:12
]#

var v = None

match v: {
    case Some(s):
        print("Impossible!\n")
}
